# mt4_trading_bot

./: .gitignore  README.md  StrategyAdapter.html  config.py  event_handler.py  hello.py  logger_setup.py  main.py  pyproject.toml  trade_manager.py
MQL4/: DWX_Server_MT4.mq4
api/: dwx_client.py
scripts/: run_backtest.py  run_live.py
strategies/: base_strategy.py  rsi_strategy.py  sma_crossover.py  tick_counter_strategy.py
trading_bot/: config.py  config2.py
trading_bot/backtesting/: strategy_adapter.py
trading_bot/core/: data_handler.py  event_handler.py  logger_setup.py  trade_manager.py
trading_bot/strategies/: alpha_vortex_strategy.py  base_strategy.py  fractal_momentum_strategy.py  rord_strategy.py  rsi_strategy.py  sma_crossover.py  tick_counter_strategy.py
trading_bot/utils/: indicators.py
utils/: risk_manager.py
